<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.daurinpoin.app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_directoryFragment2"
            app:destination="@id/navigation_history" />
    </fragment>
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.daurinpoin.app.ui.directory.DirectoryFragment"
        android:label="@string/past"
        tools:layout="@layout/fragment_directory" >
        <action
            android:id="@+id/action_navigation_history_to_navigation_scan"
            app:destination="@id/navigation_scan" />
    </fragment>
    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.daurinpoin.app.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" >
        <action
            android:id="@+id/action_navigation_scan_to_navigation_shop"
            app:destination="@id/navigation_shop" />
    </fragment>
    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.daurinpoin.app.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" >
        <action
            android:id="@+id/action_navigation_shop_to_navigation_user"
            app:destination="@id/navigation_user" />
    </fragment>
    <fragment
        android:id="@+id/navigation_user"
        android:name="com.daurinpoin.app.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />

</navigation>