<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica_bold"
        android:letterSpacing="0.04"
        android:text="Welcome"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/subWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:fontFamily="@font/helvetica_regular"
        android:letterSpacing="0.04"
        android:text="Log in now to continue"
        android:textColor="@color/sub_black"
        android:textSize="14sp" />
    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_below="@+id/subWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/title_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoImageView"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/helvetica_regular"
        android:letterSpacing="0.04"
        android:text="@string/text_emailadress"
        android:textColor="@color/sub_black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/title_email"
        android:layout_marginTop="6dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="12dp"
        android:fontFamily="@font/helvetica_regular"
        android:hint="@string/text_enter_email"
        android:inputType="textEmailAddress"
        android:letterSpacing="0.01"
        android:padding="14dp"
        android:textColorHint="@color/sub_black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/title_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/helvetica_regular"
        android:letterSpacing="0.04"
        android:text="@string/text_password"
        android:textColor="@color/sub_black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/title_password"
        android:layout_marginTop="6dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_lock"
        android:drawableEnd="@drawable/ic_eye"
        android:drawablePadding="12dp"
        android:fontFamily="@font/helvetica_regular"
        android:hint="@string/text_enter_password"
        android:inputType="textPassword"
        android:letterSpacing="0.01"
        android:padding="14dp"
        android:textColorHint="@color/sub_black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:background="@drawable/button_transparent"
        android:fontFamily="@font/helvetica_bold"
        android:text="Forget Password?"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="14sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgetPassword"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button_background"
        android:onClick="loginApp"
        android:paddingVertical="12dp"
        android:text="@string/text_login"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_regular"
            android:letterSpacing="0.04"
            android:text="@string/text_dont_have_account"
            android:textColor="@color/sub_black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="55dp"
            android:layout_height="20dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/button_transparent"
            android:fontFamily="@font/helvetica_bold"
            android:gravity="start"
            android:letterSpacing="0.01"
            android:onClick="signUp"
            android:text="@string/text_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>
