<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="30dp">

    <ImageView
        android:id="@+id/onboardingImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/image_onboarding" />

    <TextView
        android:id="@+id/highlightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/onboardingImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/helvetica_bold"
        android:letterSpacing="0.04"
        android:onClick="goToLoginPage"
        android:text="@string/onboarding_maintext"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/highlightText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/helvetica_regular"
        android:gravity="center"
        android:letterSpacing="0.04"
        android:lineSpacingExtra="10dp"
        android:text="@string/onboarding_subtext"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_button_background"
        android:fontFamily="@font/helvetica_regular"
        android:letterSpacing="0.05"
        android:onClick="goToLoginPage"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:text="@string/onboarding_textbutton"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />


</RelativeLayout>
