<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica_bold"
        android:letterSpacing="0.04"
        android:text="Get Start Account"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/subWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:fontFamily="@font/helvetica_regular"
        android:letterSpacing="0.04"
        android:text="Sign up now to continue"
        android:textColor="@color/sub_black"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_below="@+id/subWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoImageView"
        android:layout_marginTop="25dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_regular"
                    android:letterSpacing="0.04"
                    android:text="@string/text_fullname"
                    android:textColor="@color/sub_black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/title_name"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/rounded_edittext"
                    android:drawableStart="@drawable/ic_people"
                    android:drawablePadding="12dp"
                    android:drawableTint="#9FADBC"
                    android:fontFamily="@font/helvetica_regular"
                    android:hint="Enter your full name"
                    android:inputType="textEmailAddress"
                    android:letterSpacing="0.01"
                    android:padding="14dp"
                    android:textColorHint="@color/sub_black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/title_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullname"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/helvetica_regular"
                    android:letterSpacing="0.04"
                    android:text="@string/text_emailadress"
                    android:textColor="@color/sub_black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/title_email"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/rounded_edittext"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="12dp"
                    android:fontFamily="@font/helvetica_regular"
                    android:hint="@string/text_enter_email"
                    android:inputType="textEmailAddress"
                    android:letterSpacing="0.01"
                    android:padding="14dp"
                    android:textColorHint="@color/sub_black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/title_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/username"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/helvetica_regular"
                    android:letterSpacing="0.04"
                    android:text="@string/text_password"
                    android:textColor="@color/sub_black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/title_password"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/rounded_edittext"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableEnd="@drawable/ic_eye"
                    android:drawablePadding="12dp"
                    android:fontFamily="@font/helvetica_regular"
                    android:hint="@string/text_enter_password"
                    android:inputType="textPassword"
                    android:letterSpacing="0.01"
                    android:padding="14dp"
                    android:textColorHint="@color/sub_black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/title_repassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/helvetica_regular"
                    android:letterSpacing="0.04"
                    android:text="@string/text_confirmpassword"
                    android:textColor="@color/sub_black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/repassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/title_repassword"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/rounded_edittext"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableEnd="@drawable/ic_eye"
                    android:drawablePadding="12dp"
                    android:fontFamily="@font/helvetica_regular"
                    android:hint="@string/text_reenter_password"
                    android:inputType="textPassword"
                    android:letterSpacing="0.01"
                    android:padding="14dp"
                    android:textColorHint="@color/sub_black"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/signupButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/repassword"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/rounded_button_background"
                    android:fontFamily="@font/helvetica_bold"
                    android:letterSpacing="0.05"
                    android:onClick="registerApp"
                    android:paddingVertical="12dp"
                    android:text="@string/text_sign_up"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>

